test_scores/negative_dimers/features/Q9P2L0.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9P2L0.pkl.xz